prog/1stPartyLibs/quirrel/quirrel/testData/exec/runtime_type_check/assign_wrong_type_09.out
ERROR: expression of type 'string' cannot be assigned to type 'table'
testData/exec/runtime_type_check/assign_wrong_type_09.nut:2:5

let arr = [4.0]
let [y: table = "test"] = arr
     ^----------------
return y


Error [Failed to compile file testData/exec/runtime_type_check/assign_wrong_type_09.nut (testData/exec/runtime_type_check/assign_wrong_type_09.nut)]
