prog/1stPartyLibs/quirrel/quirrel/testData/exec/runtime_type_check/assign_wrong_type_09.nut
let arr = [4.0]
let [y: table = "test"] = arr
return y
